--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a aria-hidden="true"></a>
     <a href="#"> click here</a>
     <a title="" href="#">click here</a>
-    <a href="#main" title=""></a>
+    <a href="#main" title="main"></a>
     <a href="/contacts">click here</a>
   </div>  
 
