--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div>
     <a title="click here" aria-hidden="true"></a>
-    <a title="click"> click here</a>
+    <a title="click" href="#"> click here</a>
     <a title="" href="#">click here</a>
     <a href="#main" title="click here"></a>
     <a title="" href="#">click here</a>
